[gd_scene load_steps=29 format=3 uid="uid://47ahg1q5c7k4"]

[ext_resource type="Texture2D" uid="uid://bfxo8djr5ybh6" path="res://texture/A_white_cube.png" id="1_b7piu"]
[ext_resource type="Script" path="res://scripts/level_5.gd" id="1_xvhva"]
[ext_resource type="PackedScene" uid="uid://iog44ou6rn43" path="res://Others/player.tscn" id="2_hlqbw"]
[ext_resource type="Texture2D" uid="uid://bt8q38iegkdb1" path="res://texture/pixil-frame-0.png" id="3_if3gy"]
[ext_resource type="Texture2D" uid="uid://qohxc6wvntmw" path="res://texture/pixil-frame-0 (1).png" id="3_t023u"]
[ext_resource type="Texture2D" uid="uid://bhxpwi45a4ao8" path="res://texture/flag.png" id="4_g6th7"]
[ext_resource type="Script" path="res://scripts/coins_counter.gd" id="5_f82x7"]
[ext_resource type="Texture2D" uid="uid://c4qdotc4b4kh1" path="res://texture/pissmanframe1.png" id="6_pf0hm"]
[ext_resource type="Shader" path="res://Others/BlurGB.gdshader" id="7_h1eon"]
[ext_resource type="Material" uid="uid://p5ibbvxbqjpd" path="res://texture/blurshader.tres" id="8_gwc3n"]
[ext_resource type="Theme" uid="uid://khgpj6ruioa0" path="res://texture/Bold_text.tres" id="9_gna41"]
[ext_resource type="Theme" uid="uid://flijevvthfaj" path="res://texture/text.tres" id="10_vdfys"]
[ext_resource type="FontFile" uid="uid://cnjcheyut2dew" path="res://texture/fonts/Handjet-SemiBold.ttf" id="11_efk3j"]
[ext_resource type="Texture2D" uid="uid://bo7d3b7hpqtin" path="res://texture/just_a_cube.png" id="12_xy4lp"]
[ext_resource type="Texture2D" uid="uid://bstdhsw1te717" path="res://texture/coin.png" id="13_w3y8k"]
[ext_resource type="AudioStream" uid="uid://bpmdm467nd4ap" path="res://sound/Coin sound (3).mp3" id="16_p0827"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hr0d7"]
size = Vector2(78, 77)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_htx08"]
size = Vector2(410.5, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5j7h"]
size = Vector2(272, 181)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ko2h"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oym25"]
size = Vector2(46, 47)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w5qo8"]
shader = ExtResource("7_h1eon")
shader_parameter/blur_amount = 3.191
shader_parameter/mix_amount = 0.079
shader_parameter/color_over = null

[sub_resource type="LabelSettings" id="LabelSettings_jlfr0"]
font = ExtResource("11_efk3j")
font_size = 40

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iwvpy"]
shader = ExtResource("7_h1eon")
shader_parameter/blur_amount = 3.014
shader_parameter/mix_amount = 0.642
shader_parameter/color_over = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wyoa5"]
shader = ExtResource("7_h1eon")
shader_parameter/blur_amount = 2.739
shader_parameter/mix_amount = 0.774
shader_parameter/color_over = Color(0.523532, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_plsd2"]
font = ExtResource("11_efk3j")
font_size = 40

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6ivp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6c4gh"]
size = Vector2(3682, 40)

[node name="Level5" type="Node2D"]
script = ExtResource("1_xvhva")

[node name="sky thing" type="TextureRect" parent="."]
modulate = Color(0, 0.75, 1, 1)
z_index = -10
offset_left = -1402.0
offset_top = -1136.0
offset_right = 2620.0
offset_bottom = 1123.0
texture = ExtResource("1_b7piu")

[node name="player2d" parent="." instance=ExtResource("2_hlqbw")]
position = Vector2(1, 24)

[node name="Camera2D" type="Camera2D" parent="player2d"]
offset = Vector2(0, -50)
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="stone" type="Node2D" parent="."]

[node name="stone platform" type="StaticBody2D" parent="stone"]
position = Vector2(150, -17)

[node name="CollisionShape2D" type="CollisionShape2D" parent="stone/stone platform"]
position = Vector2(-3, 74.5)
shape = SubResource("RectangleShape2D_hr0d7")

[node name="TextureRect" type="TextureRect" parent="stone/stone platform"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 113.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_t023u")
expand_mode = 1

[node name="stone platform2" type="StaticBody2D" parent="stone"]
position = Vector2(319, -52)

[node name="CollisionShape2D" type="CollisionShape2D" parent="stone/stone platform2"]
position = Vector2(-3, 74.5)
shape = SubResource("RectangleShape2D_hr0d7")

[node name="TextureRect" type="TextureRect" parent="stone/stone platform2"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 113.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_t023u")
expand_mode = 1

[node name="stone platform3" type="StaticBody2D" parent="stone"]
position = Vector2(467, -82)

[node name="CollisionShape2D" type="CollisionShape2D" parent="stone/stone platform3"]
position = Vector2(161.75, 73)
shape = SubResource("RectangleShape2D_htx08")

[node name="TextureRect" type="TextureRect" parent="stone/stone platform3"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 367.0
offset_bottom = 113.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_t023u")
expand_mode = 1
stretch_mode = 1

[node name="grass" type="Node2D" parent="."]

[node name="grass platform" type="StaticBody2D" parent="grass"]
position = Vector2(-161, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform"]
position = Vector2(93, 128.5)
shape = SubResource("RectangleShape2D_m5j7h")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 230.0
offset_bottom = 134.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_if3gy")
expand_mode = 1
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="grass/grass platform/TextureRect"]
z_index = -1
texture_filter = 1
texture_repeat = 2
layout_mode = 0
offset_top = 85.0
offset_right = 274.0
offset_bottom = 183.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_if3gy")
expand_mode = 1
stretch_mode = 1

[node name="grass platform3" type="StaticBody2D" parent="grass"]
position = Vector2(-785, -63)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform3"]
position = Vector2(-3, 74.5)
shape = SubResource("RectangleShape2D_hr0d7")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform3"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 113.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_if3gy")
expand_mode = 1
stretch_mode = 1

[node name="grass platform5" type="StaticBody2D" parent="grass"]
position = Vector2(-536, -26)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform5"]
position = Vector2(0, 76)
shape = SubResource("RectangleShape2D_hr0d7")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform5"]
texture_filter = 1
texture_repeat = 2
offset_left = -43.0
offset_top = 37.0
offset_right = 39.0
offset_bottom = 114.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_if3gy")
expand_mode = 1
stretch_mode = 1

[node name="grass platform11" type="StaticBody2D" parent="grass"]
position = Vector2(-342, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform11"]
position = Vector2(0, 76)
shape = SubResource("RectangleShape2D_hr0d7")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform11"]
texture_filter = 1
texture_repeat = 2
offset_left = -43.0
offset_top = 37.0
offset_right = 39.0
offset_bottom = 114.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_if3gy")
expand_mode = 1
stretch_mode = 1

[node name="ending" type="StaticBody2D" parent="."]
position = Vector2(930, -4)

[node name="TextureRect" type="TextureRect" parent="ending"]
texture_filter = 1
texture_repeat = 2
offset_left = -22.0
offset_top = -19.0
offset_right = 18.0
offset_bottom = 21.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_g6th7")
expand_mode = 1
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ending"]
position = Vector2(-2, 1)
shape = SubResource("RectangleShape2D_8ko2h")

[node name="Area2D" type="Area2D" parent="ending"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ending/Area2D"]
position = Vector2(-2, 1.5)
shape = SubResource("RectangleShape2D_oym25")

[node name="textbox" type="CanvasLayer" parent="."]

[node name="coins_collector" type="Label" parent="textbox"]
offset_right = 60.0
offset_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Coins = "
script = ExtResource("5_f82x7")

[node name="Panel" type="Panel" parent="textbox"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -173.0
offset_top = 24.0
offset_right = 174.0
offset_bottom = 134.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="textbox/Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 266.0
offset_top = -67.0
offset_right = 447.0
offset_bottom = 99.0
texture = ExtResource("6_pf0hm")

[node name="Label" type="Label" parent="textbox/Panel"]
layout_mode = 0
offset_left = 67.0
offset_top = 9.0
offset_right = 192.0
offset_bottom = 32.0
text = "W"

[node name="level_done" type="Control" parent="textbox"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="textbox/level_done"]
material = SubResource("ShaderMaterial_w5qo8")
layout_mode = 0
offset_left = -663.0
offset_top = -389.0
offset_right = 792.0
offset_bottom = 417.0

[node name="ColorRect" type="ColorRect" parent="textbox/level_done"]
material = ExtResource("8_gwc3n")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -73.0
offset_right = 118.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_gna41")

[node name="Label" type="Label" parent="textbox/level_done"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -64.0
offset_right = 48.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_gna41")
text = "Level Done!"
horizontal_alignment = 1

[node name="Button" type="Button" parent="textbox/level_done"]
texture_filter = 1
layout_mode = 0
offset_left = -2.0
offset_top = 54.0
offset_right = 43.0
offset_bottom = 85.0
theme = ExtResource("10_vdfys")
text = "Next"

[node name="pause_menu" type="Control" parent="textbox"]
visible = false
z_index = 1
z_as_relative = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -32.0
offset_right = 52.5
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="textbox/pause_menu"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -1.318
anchor_right = 0.5
anchor_bottom = -1.318
offset_left = -77.0
offset_top = -31.648
offset_right = 77.0
offset_bottom = 14.352
grow_horizontal = 2
grow_vertical = 2
text = "Paused"
label_settings = SubResource("LabelSettings_jlfr0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="textbox/pause_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -33.0
offset_right = 48.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="textbox/pause_menu/MarginContainer"]
layout_mode = 2

[node name="exit" type="Button" parent="textbox/pause_menu/MarginContainer/VBoxContainer"]
z_index = 10
layout_mode = 2
theme = ExtResource("10_vdfys")
text = "Main Menu"

[node name="resume" type="Button" parent="textbox/pause_menu/MarginContainer/VBoxContainer"]
z_index = 10
layout_mode = 2
theme = ExtResource("10_vdfys")
text = "CONTINE"

[node name="bg" type="TextureRect" parent="textbox/pause_menu"]
z_index = -1
material = ExtResource("8_gwc3n")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -671.5
offset_top = -378.0
offset_right = 671.5
offset_bottom = 454.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("12_xy4lp")

[node name="bg2" type="TextureRect" parent="textbox/pause_menu"]
z_index = -1
material = SubResource("ShaderMaterial_iwvpy")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.5
offset_top = -405.0
offset_right = 97.5
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("12_xy4lp")

[node name="death_screen" type="Control" parent="textbox"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="textbox/death_screen"]
material = SubResource("ShaderMaterial_wyoa5")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -624.5
offset_top = -360.5
offset_right = 624.5
offset_bottom = 360.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_b7piu")

[node name="BoxContainer" type="BoxContainer" parent="textbox/death_screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.5
offset_top = -42.5
offset_right = 103.5
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="Label" type="Label" parent="textbox/death_screen/BoxContainer"]
texture_filter = 1
layout_mode = 2
text = "You Might have Died!"
label_settings = SubResource("LabelSettings_plsd2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="textbox/death_screen/BoxContainer"]
layout_mode = 2
text = "Player = NULL 
Player does not exist"
horizontal_alignment = 1

[node name="respawn_button" type="Button" parent="textbox/death_screen/BoxContainer"]
layout_mode = 2
text = "Respawn"

[node name="coin1" type="Area2D" parent="."]
position = Vector2(-787, -57)

[node name="Sprite2D" type="Sprite2D" parent="coin1"]
texture_filter = 1
texture = ExtResource("13_w3y8k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin1"]
shape = SubResource("RectangleShape2D_o6ivp")

[node name="death_trigger" type="Area2D" parent="."]
position = Vector2(468, 324)

[node name="CollisionShape2D" type="CollisionShape2D" parent="death_trigger"]
position = Vector2(139, -10)
shape = SubResource("RectangleShape2D_6c4gh")

[node name="CoinSound(3)" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_p0827")
bus = &"sfx"

[connection signal="body_shape_entered" from="ending/Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="pressed" from="textbox/level_done/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="textbox/pause_menu/MarginContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="textbox/pause_menu/MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="textbox/death_screen/BoxContainer/respawn_button" to="." method="_on_respawn_button_pressed"]
[connection signal="body_shape_entered" from="coin1" to="." method="_on_coin_1_body_shape_entered"]
[connection signal="body_shape_entered" from="death_trigger" to="." method="_on_death_trigger_body_shape_entered"]
